<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.SignInActivity" android:background="@color/black">

    <TextView
            android:text="@string/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/white"
            android:textSize="24sp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginTop="100dp"/>
    <TextView
            android:text="@string/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"
            android:textColor="@color/whiteGrey" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextText"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:hint="@string/title_activity_sign_in"
            android:textColor="@color/white" android:text="@string/username"
            android:backgroundTint="@color/white"
            app:layout_constraintHorizontal_bias="0.0" android:minHeight="48dp"/>
    <TextView
            android:text="@string/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            android:textColor="@color/whiteGrey"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textPassword"
            android:ems="10"
            android:id="@+id/editTextText2"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:backgroundTint="@color/white"
            android:textColor="@color/white" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:text="mean" android:minHeight="48dp"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:background="@drawable/shape_ractangle_red" android:textColor="@color/white"
            app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button2" android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:background="@drawable/shape_ractangle_grey" android:textColor="@color/white"/>
    <ImageView
            android:src="@drawable/logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>